# onnxnpu-toolkit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
docs/: PROFILE_SCHEMA.md
src/onnxnpu/: checker.py  cli.py  optimizer.py
