[project]
name = "onnxnpu"
version = "0.1.1"
description = "Toolkit to check, optimize and modify ONNX models for NPU deployment"
readme = "README.md"
requires-python = ">=3.9"
maintainers = [
    { name = "Mason Huang", email = "masonhuang0320@gmail.com"},
]
dependencies = [
    "onnx>=1.17.0",
    "onnxnpu>=0.1.1",
]
license = { text = "Apache-2.0" }

[project.urls]
homepage = "https://github.com/HuangMason320/onnxnpu-toolkit"
repository = "https://github.com/HuangMason320/onnxnpu-toolkit"

[tool.uv.workspace]
members = [
    "onnxnpu-toolkit",
]

[project.scripts]
onpu = "onnxnpu.cli:main"
onnxnpu = "onnxnpu.cli:main"
